--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,31 @@ dependencies:
     sdk: flutter
   flutter_web_auth: ^0.5.0
   http: ^1.2.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.9
+  animated_text_kit: ^4.2.2
+  animate_do: ^3.3.4
+  flutter_local_notifications: ^17.1.2
+  timezone: ^0.9.3
+  date_time_picker: ^2.1.0
+  day_night_time_picker: ^1.3.1
+  intl: ^0.17.0
 
 dev_dependencies: 
   flutter_lints: 4.0.0
   flutter_test: 
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  ios: true
+  image_path: "assets/logo.png"
 
 flutter: 
+  assets:
+    - assets/logo.png
+  
   uses-material-design: true
 
